--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,17 @@
 {
-  "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "./tests",
-    "-p",
-    "test_*.py"
-  ],
+  // "python.testing.unittestArgs": [
+  //   "-v",
+  //   "-s",
+  //   "./tests",
+  //   "-p",
+  //   "test_*.py"
+  // ],
   "python.testing.pytestEnabled": true,
   "python.testing.nosetestsEnabled": false,
   "python.testing.unittestEnabled": false,
   "python.testing.pytestArgs": [
+    "-v",
+    "-s",
     "tests"
   ]
 }
